<resources>
    <string name="app_name">Thapar Helper</string>
    <string name="Email_Id">Email</string>
    <string name="type_your_password_here">Password</string>
    <string name="name">Name</string>
    <string name="roll_number">Roll number</string>
    <string name="branch">Branch</string>
    <string name="batch">Batch</string>
    <string name="department">Department</string>
    <string name="designation">Designation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">UserName</string>
    <string name="type">Type</string>
    <string name="day">Day</string>
    <string name="subject">Subject</string>
    <string name="add">Add</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="course_code">Course Code</string>
    <string name="group_name">Group Name</string>
    <string name="create">Create</string>
    <string name="new_messages">New Messages</string>
    <string name="MessageType">MessageType</string>
    <string name="SenderUid">SenderUid</string>
    <string name="sender_name">Sender Name</string>
    <string name="Data">Data</string>
    <string name="messageId">messageId</string>
    <string name="groupCount">groupCount</string>
    <string name="subjectName">subjectName</string>
    <string name="assignmentTopic">assignmentTopic</string>
    <string name="assignmentDesc">desc</string>
    <string name="assignmentDeadline">deadline</string>
    <string name="submissionLink">submissionLink</string>
    <string name="fileLink">fileLink</string>
    <string name="senderName">senderName</string>
    <string name="circle">circle</string>
    <string name="namedb">name</string>
    <string name="biodb">bio</string>
    <string name="deptdb">department</string>
    <string name="mobdb">mobNumber</string>
    <string name="dpLink">profileImageLink</string>
    <string name="branchdb">branch</string>
    <string name="profileImageLink">profileImageLink</string>

</resources>