<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootSignUpLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackgroundDefault"
    tools:context=".SignUpActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userNameSignUpLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:focusableInTouchMode="true"
                android:hint="@string/name"
                app:hintTextColor="@color/hintColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userNameSignUpInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:textColor="@color/textColorForBlackBack"
                    android:textColorHint="@color/ShadeMedium"
                    android:textSize="@dimen/textSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userRollSignUpLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginBetweenText"
                android:focusableInTouchMode="true"
                android:hint="@string/roll_number"
                app:hintTextColor="@color/hintColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userRollSignUpInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/roll_number"
                    android:inputType="number"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/ShadeMedium"
                    android:textSize="@dimen/textSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userBranchSignUpLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginBetweenText"
                android:focusableInTouchMode="true"
                android:hint="@string/branch"
                app:hintTextColor="@color/hintColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userBranchSignUpInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/branch"
                    android:inputType="text"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/ShadeMedium"
                    android:textSize="@dimen/textSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userBatchSignUpLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginBetweenText"
                android:focusableInTouchMode="true"
                android:hint="@string/batch"
                app:hintTextColor="@color/hintColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userBatchSignUpInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/batch"
                    android:inputType="text"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/ShadeMedium"
                    android:textSize="@dimen/textSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userDepartmentSignUpLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginBetweenText"
                android:focusableInTouchMode="true"
                android:hint="@string/department"
                app:hintTextColor="@color/hintColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userDepartmentSignUpInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/department"
                    android:inputType="text"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/ShadeMedium"
                    android:textSize="@dimen/textSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userDesignationSignUpLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginBetweenText"
                android:focusableInTouchMode="true"
                android:hint="@string/designation"
                app:hintTextColor="@color/hintColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userDesignationSignUpInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/designation"
                    android:inputType="text"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/ShadeMedium"
                    android:textSize="@dimen/textSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userEmailSignUpLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginBetweenText"
                android:focusableInTouchMode="true"
                android:hint="@string/Email_Id"
                app:hintTextColor="@color/hintColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userEmailSignUpInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Email_Id"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/ShadeMedium"
                    android:textSize="@dimen/textSize" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userMobileSignUpLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginBetweenText"
                android:focusableInTouchMode="true"
                android:hint="Mobile Number"
                app:hintTextColor="@color/hintColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userMobileSignUpInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Mobile Number"
                    android:inputType="number"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/ShadeMedium"
                    android:textSize="@dimen/textSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userPasswordSignUpLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginBetweenText"
                android:focusableInTouchMode="true"
                android:hint="Enter Password"
                app:hintTextColor="@color/hintColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userPasswordSignUpInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter Password"
                    android:inputType="text"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/ShadeMedium"
                    android:textSize="@dimen/textSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userRePasswordSignUpLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginBetweenText"
                android:focusableInTouchMode="true"
                android:hint="Re-enter Password"
                app:hintTextColor="@color/hintColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userRePasswordSignUpInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Re-enter Password"
                    android:inputType="textPassword"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/ShadeMedium"
                    android:textSize="@dimen/textSize" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/signUpButtonSign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorButtonBackground"
        android:clickable="true"
        android:text="Sign Up"
        android:textColor="#000000"
        android:textSize="@dimen/textSize"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>